# awl

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  context.md  make.bat
.github/workflows/: release.yml
crates/worklog-cli/: Cargo.toml
crates/worklog-cli/src/: args.rs  lib.rs  main.rs  output.rs  tests.rs
crates/worklog-cli/src/commands/: calendar.rs  entry.rs  export.rs  mod.rs
crates/worklog-core/: Cargo.toml
crates/worklog-core/migrations/: 0001_init.sql
crates/worklog-core/src/: db.rs  error.rs  lib.rs  model.rs  repo.rs  report.rs  sync.rs
crates/worklog-core/src/repo/: calendar.rs  codec.rs  entry.rs  tests.rs
crates/worklog-core/tests/: scaffold_contract.rs
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: api.ts  app.tsx  data.ts  icons.tsx  main.tsx  selection.ts  store.ts  theme.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tests.rs
desktop/src/views/: confirmed-list.tsx  draft-inbox.tsx  entry-form.tsx  entry-row.tsx  export-panel.tsx  settings-panel.tsx
docs/plans/: 2026-06-16-worklog-tool-design.md  2026-06-16-worklog-tool-tasks.md
skills/: README.md
skills/log-work/: SKILL.md
skills/weekly-report/: SKILL.md
skills/weekly-report/references/: report-format.md
