[package]
name = "worklog-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
directories = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4"] }
