[package]
name = "worklog-desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "worklog_desktop"
path = "src/lib.rs"

[[bin]]
name = "worklog-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
directories = "6.0.0"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
uuid = { version = "1.23.3", features = ["v4"] }
worklog-core = { path = "../../crates/worklog-core" }
